系統標題修改

--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Index.cshtml
@@ -25,39 +25,40 @@
     var requestToken = Html.Raw(Antiforgery.GetAndStoreTokens(Context).RequestToken);
     UserAccountForSession sess = HttpContextAccessor.HttpContext.Session.GetObject<UserAccountForSession>(nameof(UserAccountForSession));
 
-    ViewData["Title"] = (string)sess.GetUserAuthority()["procname"];
-    var canCreate = Html.Raw(sess.AddYn).ToString().ToLower();
-    var canUpdate = Html.Raw(sess.UpdateYn).ToString().ToLower();
-    var canDelete = Html.Raw(sess.DeleteYn).ToString().ToLower();
-    var canQuery = Html.Raw(sess.QueryYn).ToString().ToLower();
-    var canExport = Html.Raw(sess.ExportYn).ToString().ToLower();
+    @*ViewData["Title"] = (string)sess.GetUserAuthority()["procname"];*@
+ViewData["Title"] = "TR5MIDTERM_01 承租人檔維護"; ;
+var canCreate = Html.Raw(sess.AddYn).ToString().ToLower();
+var canUpdate = Html.Raw(sess.UpdateYn).ToString().ToLower();
+var canDelete = Html.Raw(sess.DeleteYn).ToString().ToLower();
+var canQuery = Html.Raw(sess.QueryYn).ToString().ToLower();
+var canExport = Html.Raw(sess.ExportYn).ToString().ToLower();
 
-    var dateTimePropertyName = new
+var dateTimePropertyName = new
+{
+    MasterTable = new Dictionary<string, string>(),
+    DetailTable = new Dictionary<string, string>(),
+};
+var dateType = (datetime: "datetime", date: "date");
+foreach (var propName in ((TableFieldDescDictionary)tablesField)[TableType.MasterTable.ToString()])
+{
+    var prop = typeof(承租人檔DisplayViewModel).GetProperty(propName.Key);
+    Type propertyType = prop.PropertyType;
+    Type typeWithNullable = Nullable.GetUnderlyingType(propertyType);
+    propertyType = typeWithNullable ?? propertyType;
+    if (propertyType == typeof(DateTime))
     {
-        MasterTable = new Dictionary<string, string>(),
-        DetailTable = new Dictionary<string, string>(),
-    };
-    var dateType = (datetime: "datetime", date: "date");
-    foreach (var propName in ((TableFieldDescDictionary)tablesField)[TableType.MasterTable.ToString()])
-    {
-        var prop = typeof(承租人檔DisplayViewModel).GetProperty(propName.Key);
-        Type propertyType = prop.PropertyType;
-        Type typeWithNullable = Nullable.GetUnderlyingType(propertyType);
-        propertyType = typeWithNullable ?? propertyType;
-        if (propertyType == typeof(DateTime))
+        var att = (DataTypeAttribute)prop.GetCustomAttributes(typeof(DataTypeAttribute), false).FirstOrDefault();
+
+        var dateTimeFormat = dateType.datetime;
+
+        if (att != null && ((DataTypeAttribute)att).DataType == DataType.Date)
         {
-            var att = (DataTypeAttribute)prop.GetCustomAttributes(typeof(DataTypeAttribute), false).FirstOrDefault();
-
-            var dateTimeFormat = dateType.datetime;
-
-            if (att != null && ((DataTypeAttribute)att).DataType == DataType.Date)
-            {
-                dateTimeFormat = dateType.date;
-            }
-
-            dateTimePropertyName.MasterTable.Add(propName.Key, dateTimeFormat);
+            dateTimeFormat = dateType.date;
         }
+
+        dateTimePropertyName.MasterTable.Add(propName.Key, dateTimeFormat);
     }
+}
 }
 
 <h1 class="mt-1">@ViewData["Title"]</h1>
