--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm03/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm03/Index.cshtml
@@ -18,7 +18,8 @@
     var requestToken = Html.Raw(Antiforgery.GetAndStoreTokens(Context).RequestToken);
     UserAccountForSession sess = HttpContextAccessor.HttpContext.Session.GetObject<UserAccountForSession>(nameof(UserAccountForSession));
 
-    ViewData["Title"] = (string)sess.GetUserAuthority()["procname"];
+    @*ViewData["Title"] = (string)sess.GetUserAuthority()["procname"];*@
+    ViewData["Title"] = "TR5MIDTERM_03 商品檔維護";
     var canCreate = Html.Raw(sess.AddYn).ToString().ToLower();
     var canUpdate = Html.Raw(sess.UpdateYn).ToString().ToLower();
     var canDelete = Html.Raw(sess.DeleteYn).ToString().ToLower();
@@ -65,7 +66,7 @@
                     @*<b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-multi-modal class="mr-1" variant="detail3">多筆建立</b-button>*@
                     <b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-modal class="mr-1" variant="detail3">建立</b-button>
                     @*<b-button v-if="slot.data.operatePermissions.canUpdate" v-b-modal.master-table-edit-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow?.param" class="mr-1" variant="detail3">編輯</b-button>
-                <b-button v-if="slot.data.operatePermissions.canDelete" v-b-modal.master-table-del-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow" class="mr-1" variant="detail3">刪除</b-button>*@
+                        <b-button v-if="slot.data.operatePermissions.canDelete" v-b-modal.master-table-del-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow" class="mr-1" variant="detail3">刪除</b-button>*@
                     <b-button v-if="slot.data.operatePermissions.canDelete" v-b-modal.master-table-edit-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow?.params?.canClickEditOrDelete || slot.data.params.data.isBusy" class="mr-1" variant="detail3">
                         <span v-if="slot.data.params.data.isBusy" class="spinner-overlay">
                             <b-spinner small type="border" class="custom-spinner"></b-spinner>
@@ -97,7 +98,7 @@
                     </multi-input>
                 </b-col>
             </b-row>
-        </template> 
+        </template>
     </table-component>
 </div>
 
@@ -159,7 +160,7 @@
                     return [];
                 }
             }
-            
+
 
             //點擊時發生呼叫事件
             const _onMasterRowSelect = function (rowData) {
@@ -224,7 +225,7 @@
                 }
 
                 //#endregion
-                
+
             }
 
             const _assignFilter = function (filterData) {
