--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm05/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm05/Index.cshtml
@@ -349,6 +349,7 @@ foreach (var propName in ((TableFieldDescDictionary)tablesField)[TableType.Detai
                                 return;
                             }
                             this.$refs.private_detailTable._editOneDetail(event, rowData);
+                            console.log(this);
                             @*this._editOneDetail(event, rowData);*@
                         }
                     } 
