--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Create.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Create.cshtml
@@ -100,7 +100,7 @@
                 <select asp-for="計租週期月數" class="form-control form-control-sm">
                     @for (int i = 1; i <= 12; i++)
                     {
-                        <option value="@i">@i</option>
+                        <option value="@i">@i 月</option>
                     }
                 </select>
             </div>
@@ -108,7 +108,7 @@
             <!-- 繳款期限 -->
             <div class="col-md-4">
                 <label asp-for="繳款期限天數" class="form-label">繳款期限天數</label>
-                <input asp-for="繳款期限天數" class="form-control form-control-sm" />
+                <input asp-for="繳款期限天數" class="form-control form-control-sm" placeholder="例如：30，代表收租日後 30 天內需付款" />/>
             </div>
 
             <div class="col-md-4">
