--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
@@ -125,7 +125,7 @@
 
     </table-component>
 </div>
-@section Styles {
+@*@section Styles {
     <style>
         .btn-custom-outline-disabled {
             color: #999;
@@ -158,7 +158,7 @@
             }
     </style>
 
-}
+}*@
 
 @section Scripts {
     <script>
