--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Create.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Create.cshtml
@@ -1,79 +1,85 @@
 ﻿@using TR5MidTerm.Controllers
 @model TR5MidTerm.Models.TR5MidTermViewModels.承租人檔CreateViewModel
+ 
 
-<div>
+<form asp-action="Create" method="post">
+    @Html.AntiForgeryToken()
+
     <div class="row">
-        <div class="col">
-            <form asp-action="Create">
-                @Html.AntiForgeryToken()
+        <!-- 承租人明文 -->
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="承租人明文" class="control-label"></label>
+                <input asp-for="承租人明文" class="form-control" placeholder="例如: 李大蟲" />
+                <span asp-validation-for="承租人明文" class="text-danger"></span>
+            </div>
+        </div>
 
-                @* 全域錯誤訊息區塊 *@
-                <div id="ModelErrorDiv" class="validation-summary-valid text-danger">
-                    <ul></ul>
-                </div>
+        <!-- 統一編號明文 -->
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="統一編號明文" class="control-label"></label>
+                <input asp-for="統一編號明文" class="form-control" placeholder="例如: A123456789" />
+                <span asp-validation-for="統一編號明文" class="text-danger"></span>
+            </div>
+        </div>
 
-                @* 使用者輸入：承租人（明文） *@
-                <div class="form-group">
-                    <label asp-for="承租人明文" class="control-label"></label>
-                    <input asp-for="承租人明文" class="form-control" />
-                    <span asp-validation-for="承租人明文" class="text-danger"></span>
-                </div>
+        <!-- 行動電話明文 -->
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="行動電話明文" class="control-label"></label>
+                <input asp-for="行動電話明文" class="form-control" placeholder="例如: 0912345678" />
+                <span asp-validation-for="行動電話明文" class="text-danger"></span>
+            </div>
+        </div>
 
-                @*<div class="form-group">
-                    <label asp-for="承租人編號" class="control-label"></label>
-                    <input asp-for="承租人編號" class="form-control" />
-                    <span asp-validation-for="承租人編號" class="text-danger"></span>
-                </div>*@
+        <!-- 電子郵件明文 -->
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="電子郵件明文" class="control-label"></label>
+                <input asp-for="電子郵件明文" class="form-control" placeholder="例如: a12345678@email.com.tw" />
+                <span asp-validation-for="電子郵件明文" class="text-danger"></span>
+            </div>
+        </div>
 
-                <div class="form-group">
-                    <label asp-for="統一編號明文" class="control-label"></label>
-                    <input asp-for="統一編號明文" class="form-control" />
-                    <span asp-validation-for="統一編號明文" class="text-danger"></span>
-                </div>
+        <!-- 身分別 -->
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="身分別編號" class="control-label"></label>
+                <select asp-for="身分別編號" class="form-control" asp-items="ViewBag.身分別選項">
+                    <option disabled selected value="">-- 請選擇 --</option>
+                </select>
+                <span asp-validation-for="身分別編號" class="text-danger"></span>
+            </div>
+        </div>
 
-                <div class="form-group">
-                    <label asp-for="行動電話明文" class="control-label"></label>
-                    <input asp-for="行動電話明文" class="form-control" />
-                    <span asp-validation-for="行動電話明文" class="text-danger"></span>
-                </div>
+        <!-- 刪除註記顯示（唯讀） -->
+        @*<div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="刪除註記顯示" class="control-label"></label>
+                <input class="form-control" value="@Model.刪除註記顯示" disabled />
+            </div>
+        </div>*@
 
-                <div class="form-group">
-                    <label asp-for="電子郵件明文" class="control-label"></label>
-                    <input asp-for="電子郵件明文" class="form-control" />
-                    <span asp-validation-for="電子郵件明文" class="text-danger"></span>
-                </div>
+        <!-- 隱藏欄位 -->
+        @Html.HiddenFor(m => m.事業)
+        @Html.HiddenFor(m => m.單位)
+        @Html.HiddenFor(m => m.部門)
+        @Html.HiddenFor(m => m.分部)
+        @Html.HiddenFor(m => m.刪除註記)
+        @Html.HiddenFor(m => m.修改人)
+        @Html.HiddenFor(m => m.修改時間)
 
-                @* 下拉選單：身分別 *@
-                <div class="form-group">
-                    <label asp-for="身分別編號" class="control-label"></label>
-                    <select asp-for="身分別編號" class="form-control" asp-items="ViewBag.身分別選項"></select>
-                    <span asp-validation-for="身分別編號" class="text-danger"></span>
-                </div>
-
-                @* 顯示用（不可編輯）：刪除註記顯示 *@
-                <div class="form-group">
-                    <label asp-for="刪除註記顯示" class="control-label"></label>
-                    <input class="form-control" value="@Model.刪除註記顯示" disabled />
-                </div>
-
-                @* 隱藏欄位（必要主鍵） *@
-                @Html.HiddenFor(m => m.事業)
-                @Html.HiddenFor(m => m.單位)
-                @Html.HiddenFor(m => m.部門)
-                @Html.HiddenFor(m => m.分部)
-                @*@Html.HiddenFor(m => m.承租人編號)*@
-                @Html.HiddenFor(m => m.刪除註記)
-                @Html.HiddenFor(m => m.修改人)
-                @Html.HiddenFor(m => m.修改時間)
-
-                <div class="form-group">
-                    <input type="submit" value="送出" class="btn btn-primary" />
-                    <a asp-action="Index" class="btn btn-secondary">返回</a>
-                </div>
-            </form>
+        <!-- 按鈕列 -->
+        <div class="col-md-12">
+            <div class="form-group mt-3">
+                <input type="submit" value="送出" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-secondary ms-2">返回</a>
+            </div>
         </div>
     </div>
-</div>
+</form>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
