--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Index.cshtml
@@ -81,7 +81,7 @@
             <b-row class="mb-2">
                 <b-col>
                     <b-button v-if="slot.data.operatePermissions.canCreate" v-b-modal.master-table-create-modal class="mr-1" variant="detail3">建立</b-button>
-                    <b-button v-if="slot.data.operatePermissions.canUpdate" v-b-modal.master-table-edit-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow?.param" class="mr-1" variant="detail3">
+                    <b-button v-if="slot.data.operatePermissions.canUpdate" v-b-modal.master-table-edit-modal @@click="slot.data.isNewItemOnTop = false" :disabled="!slot.data.selectedMasterRow?.params?.canClickEditOrDelete   || slot.data.params.data.isBusy" class="mr-1" variant="detail3">
                         <span v-if="slot.data.params.data.isBusy" class="spinner-overlay">
                             <b-spinner small type="border" class="custom-spinner"></b-spinner>
                         </span>編輯
@@ -125,8 +125,7 @@
 
     </table-component>
 </div>
-
-@*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />*@
+ 
 @section Scripts {
     <script>
         (function () {
