--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
@@ -111,7 +111,7 @@
                 </b-col>
             </b-row>
             <b-row class="mb-2">
-                <b-col>
+                <b-col cols="8">
                     <multi-input :schema="slot.data.params.data.querySchema"
                                  :select-options="slot.data.params.data.querySelectOptions"
                                  :value-obj="slot.data.params.data.queryData"
@@ -120,7 +120,23 @@
                                  v-on:filter-click="slot.data.queryFilterClicked">
                     </multi-input>
                 </b-col>
+                <b-col cols="2">
+
+                    <sticky-fields-selector :field-key-desc="slot.data.mTableFieldDesc"
+                                            selected-indic-limit=3
+                                            ref="stickySelector">
+                    </sticky-fields-selector>
+                </b-col>
+
+                <b-col cols="2">
+                    <b-button class="ml-2" variant="detail3"
+                              v-show="slot.data.$parent?.$refs?.stickySelector?.selected"
+                              @@click="()=>slot.data.$parent.$refs.stickySelector.selectedClear()">
+                        取消凍結
+                    </b-button>
+                </b-col>
             </b-row>
+
         </template>
 
     </table-component>
